force-app/main/default/objects/Event_Summary__c/Event_Summary__c.object-meta.xml
<CustomObject>
    <label>Event Summary</label>
    <nameField>
        <displayFormat>ES-{0000000000}</displayFormat>
        <label>Event Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>