force-app/main/default/objects/Event_Summary__c/fields/Average_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Time__c</fullName>
    <label>Average Response Time (ms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>