force-app/main/default/objects/Event_Summary__c/fields/Data_Volume_MB__c.field-meta.xml
<CustomField>
    <fullName>Data_Volume_MB__c</fullName>
    <label>Data Volume (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>