force-app/main/default/objects/Event_Summary__c/fields/Peak_Hour__c.field-meta.xml
<CustomField>
    <fullName>Peak_Hour__c</fullName>
    <label>Peak Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>