force-app/main/default/objects/Event_Summary__c/fields/Total_API_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_API_Calls__c</fullName>
    <label>Total API Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>