force-app/main/default/objects/Event_Summary__c/fields/Total_OAuth_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_OAuth_Events__c</fullName>
    <label>Total OAuth Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>